# lossyVELOC

./: CMakeLists.txt  configure.sh
src/backend/: CMakeLists.txt
src/common/: command.hpp
src/lib/: client.cpp
src/modules/: CMakeLists.txt  compression_module.cpp  compression_module.hpp  module_manager.cpp  module_manager.hpp
test/: CMakeLists.txt
